fix scrollbar

--- a/src/components/styles/pokelist.css
+++ b/src/components/styles/pokelist.css
@@ -10,9 +10,17 @@
     background-color: #BFF9FF;
     box-shadow: inset 0 0 20px rgba(0, 0, 0, 0.5);
     overflow: auto;
+    scrollbar-width: none;
 }
 
 ::-webkit-scrollbar {
+    width: 0px;
+    /* Remove scrollbar space */
+    background: transparent;
+    /* Optional: just make scrollbar invisible */
+}
+
+.poke-list::-moz-scrollbar {
     width: 0px;
     /* Remove scrollbar space */
     background: transparent;
